--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "node test.js"
   },
   "dependencies": {
+    "body-parser": "^1.18.2",
     "ejs": "2.5.6",
     "express": "4.15.2",
     "request": "^2.81.0"
